# artefact

./: .gitignore  .prettierrc  CNAME  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  build.py  components.json  eslint.config.js  justfile  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
.github/workflows/: deploy.yml
artefact-cli/: Cargo.toml  main.rs
artefact-lib/: Cargo.toml  jpeg.rs  lib.rs
artefact-lib/benches/: bench.rs  boxing.rs  casting.rs  init_slice.rs
artefact-lib/compute/: aux.rs  compute_projection.rs  compute_projection_simd.rs  compute_step.rs  compute_step_prob.rs  compute_step_prob_simd.rs  compute_step_simd.rs  compute_step_tv.rs  compute_step_tv2.rs  compute_step_tv2_simd.rs  compute_step_tv_simd.rs  mod.rs
artefact-lib/compute/scalar/: compute_projection.rs  compute_step.rs  compute_step_tv.rs  compute_step_tv2.rs
artefact-lib/compute/simd/: compute_projection.rs  compute_projection_simd.rs  compute_step.rs  compute_step_prob.rs  compute_step_prob_simd.rs  compute_step_simd.rs  compute_step_tv.rs  compute_step_tv2.rs  compute_step_tv2_adaptive.rs  compute_step_tv2_simd.rs  compute_step_tv_64.rs  compute_step_tv_adaptive.rs  compute_step_tv_par.rs  mod.rs
artefact-lib/compute/simd_std/: compute_projection.rs  compute_step.rs  compute_step_prob.rs  compute_step_tv.rs  compute_step_tv2.rs  mod.rs
artefact-lib/jpeg/: coefficient.rs  decompressor.rs  mod.rs  moz.rs  moz_decoder.rs  zune.rs  zune_decoder.rs
artefact-lib/jpeg_/: mod.rs  zune_decoder.rs
artefact-lib/pipeline_scalar/: compute_projection.rs  compute_step.rs  compute_step_tv.rs  mod.rs
artefact-lib/pipeline_simd_8/: coef.rs  compute_projection.rs  compute_step.rs  compute_step_prob.rs  compute_step_tv.rs  compute_step_tv2.rs  compute_step_tv_64.rs  compute_step_tv_par.rs  mod.rs
artefact-lib/pipeline_simd_adaptive/: coef.rs  compute_projection.rs  compute_step.rs  compute_step_prob.rs  compute_step_tv.rs  compute_step_tv2.rs  mod.rs
artefact-lib/utils/: boxing.rs  clamp.rs  dct.rs  dct_simd.rs  macros.rs  mod.rs
artefact-lib/utils/traits/: mod.rs
artefact-wasm/: Cargo.toml  index.html  index.js  lib.rs
backend/artefact-cli/: Cargo.toml  main.rs
backend/artefact-lib/: Cargo.toml  lib.rs
backend/artefact-lib/benches/: boxing.rs  casting.rs  dct.rs  init_slice.rs
backend/artefact-lib/jpeg/: mod.rs  moz.rs  zune.rs
backend/artefact-lib/pipeline_scalar/: coef.rs  compute_projection.rs  compute_step_prob.rs  compute_step_tv2.rs  mod.rs
backend/artefact-lib/pipeline_simd_8/: compute_projection.rs  compute_step.rs  compute_step_prob.rs  compute_step_tv.rs  compute_step_tv2.rs  mod.rs
backend/artefact-lib/pipeline_simd_adaptive/: adaptive_width.rs  coef.rs  compute_projection.rs  compute_step_tv.rs  compute_step_tv2.rs  mod.rs
backend/artefact-lib/utils/: aux.rs  dct.rs  mod.rs  traits.rs
backend/artefact-wasm/: Cargo.toml  lib.rs
backend/zune-jpeg/: Cargo.toml  LICENSE-ZLIB  LICENSE.md
docs/: development.md
frontend/: .prettierignore  .prettierrc  components.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: app.vue
src/: app.vue
src/components/: ActionButtons.vue  AppDrawer.vue  AppHeader.vue  CompareImage.vue  ImageCompare.vue  ImageInput.vue  ImageItem.vue  ImageList.vue
src/composables/: artefact-worker.ts  index.ts  states.ts  types.ts  use-artefact-worker._ts  use-artefact-worker.ts  use-image-compare-store.ts  use-image-display-list-store.ts  use-image-list-store.ts  use-process-config-store.ts  use-simple-artefact-worker.ts
src/public/: icat.js
src/utils/: artefact-worker.ts  db.ts  hash-array-buffer.ts  human-readable-size.ts  index.ts  types.ts  (+5 more)
zune-jpeg/: Cargo.toml
(+116 files in other folders)
