[package]
name = "artefact-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "webp",
    "bmp",
    "tiff",
] }
zune-jpeg = { path = "../zune-jpeg" }
mozjpeg-sys = { version = "2.2.2", optional = true }
wide = { version = "0.7.30", optional = true }
rayon = "1.10.0"
thiserror = { version = "2.0.11", optional = true }
libc = { version = "0.2.169", optional = true }

[dev-dependencies]
criterion = "0.5.1"
rand_core = "0.6.4"
rand = "0.8.5"
wide = "0.7.30"

[lib]
name = "artefact_lib"
path = "lib.rs"

[features]
simd = ["dep:wide"]
mozjpeg = ["dep:mozjpeg-sys", "dep:thiserror", "dep:libc"]
simd_std = []
native = []

[[bench]]
name = "bench"
harness = false
