[package]
name = "artefact-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.99"
artefact-lib = { path = "../artefact-lib" }

[lib]
name = "artefact_wasm"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[build-dependencies]
cc = "1.2.5"