[package]
name = "artefact-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.99"
console_error_panic_hook = "0.1.7"

[dependencies.artefact-lib]
path = "../artefact-lib"
features = ["native", "simd", "simd_std", "simd_adaptive"]

[lib]
name = "artefact_wasm"
path = "lib.rs"
crate-type = ["cdylib"]
