[package]
name = "artefact-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "webp",
    "bmp",
    "tiff",
] }
zune-jpeg = { path = "../zune-jpeg" }
mozjpeg-sys = { version = "2.2.3", optional = true }
wide = { version = "0.7.33", optional = true }
rayon = "1.11.0"
thiserror = { version = "2.0.17", optional = true }
libc = { version = "0.2.176", optional = true }
paste = "1.0.15"

[dev-dependencies]
criterion = "0.7.0"
rand_core = "0.9.3"
rand = "0.9.2"
wide = "0.7.33"

[lib]
name = "artefact_lib"
path = "lib.rs"

[features]
simd = ["dep:wide"]
simd_std = []
simd_adaptive = []
native = []
moz = ["dep:mozjpeg-sys", "dep:thiserror", "dep:libc"]

[[bench]]
name = "bench"
harness = false
